--- a/Homework files/Homework 3.ipynb
+++ b/Homework files/Homework 3.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "a8ca9571-7e44-402a-8881-555f6fda4965",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "672bd526-b1e8-4ef7-bf47-4ccada1fdfee",
    "metadata": {},
    "outputs": [
@@ -237,7 +237,7 @@
        "[1462 rows x 9 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "b2feda7f-05a5-49d9-85db-17f799f07897",
    "metadata": {},
    "outputs": [
@@ -270,7 +270,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "af5c7dc1-08be-4fce-8289-d8284230fb7c",
    "metadata": {},
    "outputs": [
@@ -301,7 +301,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "9d949416-0b34-4741-a600-fd84a10264df",
    "metadata": {},
    "outputs": [
@@ -332,7 +332,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "id": "dc658f0e-416b-40f1-a165-91acf5b4988e",
    "metadata": {},
    "outputs": [],
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "id": "4be335f4-2013-4dfe-a3ea-bb653d6fee72",
    "metadata": {},
    "outputs": [
@@ -487,7 +487,7 @@
        "[1462 rows x 4 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "5e4fe097-22c6-4762-98fb-1a841f10e9e2",
    "metadata": {},
    "outputs": [
@@ -514,7 +514,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "id": "85bd8e68-954a-4390-9598-139ce239497a",
    "metadata": {},
    "outputs": [
@@ -554,7 +554,6 @@
        "      <th>industry</th>\n",
        "      <th>employment_status</th>\n",
        "      <th>location</th>\n",
-       "      <th>converted</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -564,7 +563,6 @@
        "      <td>NA</td>\n",
        "      <td>unemployed</td>\n",
        "      <td>south_america</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -572,7 +570,6 @@
        "      <td>retail</td>\n",
        "      <td>employed</td>\n",
        "      <td>south_america</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -580,7 +577,6 @@
        "      <td>healthcare</td>\n",
        "      <td>unemployed</td>\n",
        "      <td>australia</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -588,7 +584,6 @@
        "      <td>retail</td>\n",
        "      <td>NA</td>\n",
        "      <td>australia</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -596,11 +591,9 @@
        "      <td>education</td>\n",
        "      <td>self_employed</td>\n",
        "      <td>europe</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -612,7 +605,6 @@
        "      <td>manufacturing</td>\n",
        "      <td>self_employed</td>\n",
        "      <td>north_america</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1458</th>\n",
@@ -620,7 +612,6 @@
        "      <td>technology</td>\n",
        "      <td>student</td>\n",
        "      <td>europe</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1459</th>\n",
@@ -628,7 +619,6 @@
        "      <td>technology</td>\n",
        "      <td>student</td>\n",
        "      <td>north_america</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1460</th>\n",
@@ -636,7 +626,6 @@
        "      <td>NA</td>\n",
        "      <td>self_employed</td>\n",
        "      <td>north_america</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1461</th>\n",
@@ -644,44 +633,30 @@
        "      <td>finance</td>\n",
        "      <td>student</td>\n",
        "      <td>north_america</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1462 rows × 5 columns</p>\n",
+       "<p>1462 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         lead_source       industry employment_status       location  \\\n",
-       "0           paid_ads             NA        unemployed  south_america   \n",
-       "1       social_media         retail          employed  south_america   \n",
-       "2             events     healthcare        unemployed      australia   \n",
-       "3           paid_ads         retail                NA      australia   \n",
-       "4           referral      education     self_employed         europe   \n",
-       "...              ...            ...               ...            ...   \n",
-       "1457        referral  manufacturing     self_employed  north_america   \n",
-       "1458        referral     technology           student         europe   \n",
-       "1459        paid_ads     technology           student  north_america   \n",
-       "1460        referral             NA     self_employed  north_america   \n",
-       "1461  organic_search        finance           student  north_america   \n",
+       "         lead_source       industry employment_status       location\n",
+       "0           paid_ads             NA        unemployed  south_america\n",
+       "1       social_media         retail          employed  south_america\n",
+       "2             events     healthcare        unemployed      australia\n",
+       "3           paid_ads         retail                NA      australia\n",
+       "4           referral      education     self_employed         europe\n",
+       "...              ...            ...               ...            ...\n",
+       "1457        referral  manufacturing     self_employed  north_america\n",
+       "1458        referral     technology           student         europe\n",
+       "1459        paid_ads     technology           student  north_america\n",
+       "1460        referral             NA     self_employed  north_america\n",
+       "1461  organic_search        finance           student  north_america\n",
        "\n",
-       "      converted  \n",
-       "0             1  \n",
-       "1             0  \n",
-       "2             1  \n",
-       "3             0  \n",
-       "4             1  \n",
-       "...         ...  \n",
-       "1457          1  \n",
-       "1458          1  \n",
-       "1459          1  \n",
-       "1460          1  \n",
-       "1461          1  \n",
-       "\n",
-       "[1462 rows x 5 columns]"
+       "[1462 rows x 4 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "id": "da9ee4af-a5d7-4d38-b7b3-1f07fbc613a8",
    "metadata": {},
    "outputs": [
@@ -705,11 +680,10 @@
        "industry             0\n",
        "employment_status    0\n",
        "location             0\n",
-       "converted            0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "id": "77ef4814-564b-4e9a-b1c2-4e9bfae48cff",
    "metadata": {},
    "outputs": [
@@ -739,7 +713,7 @@
        "Name: industry, dtype: object"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -766,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "id": "0980e01a-2386-4bcd-b828-359a4c68adda",
    "metadata": {},
    "outputs": [
@@ -844,7 +818,7 @@
        "lead_score                         0.009888    1.000000  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -872,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "id": "4000787c-1de5-43db-accd-925e1b7f3989",
    "metadata": {},
    "outputs": [
@@ -882,7 +856,7 @@
        "(876, 293, 293)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -898,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "id": "e83814e2-9fdc-4572-89f9-9e2cc0010e7e",
    "metadata": {},
    "outputs": [],
@@ -911,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "id": "a1a896f4-52b0-4525-bd79-fed58f923be6",
    "metadata": {},
    "outputs": [],
@@ -924,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "id": "0da22c9b-db25-4c6a-b5b2-1891599f248d",
    "metadata": {},
    "outputs": [],
@@ -946,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "id": "091cee19-bceb-472b-95a0-af000f8401d6",
    "metadata": {},
    "outputs": [],
@@ -957,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "id": "f3187eaf-bf38-4ad9-8704-2cf9465446dd",
    "metadata": {},
    "outputs": [],
@@ -969,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 19,
    "id": "91478ee7-9f0b-401b-99e2-b929fbd08015",
    "metadata": {},
    "outputs": [
@@ -983,7 +957,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1012,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 20,
    "id": "69b1684c-78cc-4adb-b03f-62052a7453c8",
    "metadata": {},
    "outputs": [],
@@ -1032,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 21,
    "id": "24dea471-dff5-4d01-89c4-7ab879e7e205",
    "metadata": {},
    "outputs": [
@@ -1724,7 +1698,7 @@
        "LogisticRegression(max_iter=1000, random_state=42, solver='liblinear')"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1740,7 +1714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 22,
    "id": "7986c6a3-071d-4d01-bfd5-e7b6d9cdf96a",
    "metadata": {},
    "outputs": [
@@ -1772,7 +1746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 23,
    "id": "1edb8c64-7198-4477-ae3f-6657d6e3d129",
    "metadata": {},
    "outputs": [
@@ -1784,7 +1758,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1795,7 +1769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 24,
    "id": "664def29-dbaa-4a2b-b842-add096a3e16a",
    "metadata": {},
    "outputs": [],
@@ -1811,7 +1785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 25,
    "id": "fb76786e-d6bb-4778-99d3-6f6f95e9bb40",
    "metadata": {},
    "outputs": [
@@ -1850,7 +1824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 26,
    "id": "368a7916-4d13-4b8b-802a-687c61d1286c",
    "metadata": {},
    "outputs": [
@@ -1889,7 +1863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 27,
    "id": "6447c178-939c-4f51-804c-16ff07e86132",
    "metadata": {},
    "outputs": [
@@ -1928,7 +1902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 28,
    "id": "12395604-db33-4dd1-a423-671e6eacc40f",
    "metadata": {},
    "outputs": [
@@ -1950,6 +1924,64 @@
    "metadata": {},
    "source": [
     "### Question 6. Parameter tuning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "bfc25334-b452-4307-b800-e4457d6702cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.01: 0.7\n",
+      "0.1: 0.7\n",
+      "1: 0.7\n",
+      "10: 0.7\n",
+      "100: 0.7\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train models using all the features as in Q4.\n",
+    "# Train dataset\n",
+    "dv = DictVectorizer(sparse=False)\n",
+    "train_dicts = df_train[categorical + numerical].to_dict(orient='records')\n",
+    "X_train = dv.fit_transform(train_dicts)\n",
+    "\n",
+    "# Validation dataset\n",
+    "val_dicts = df_val[categorical + numerical].to_dict(orient='records')\n",
+    "X_val = dv.transform(val_dicts)\n",
+    "\n",
+    "# Empty dict to store accuracy for each regularization parameter\n",
+    "accuracy_dict = {}\n",
+    "\n",
+    "# Let's try the following values of the parameter C: [0.01, 0.1, 1, 10, 100].\n",
+    "for c in [0.01, 0.1, 1, 10, 100]:\n",
+    "    \n",
+    "    # let's train a regularized logistic regression.\n",
+    "    model = LogisticRegression(solver='liblinear', C=c, max_iter=1000, random_state=42)\n",
+    "    model.fit(X_train, y_train)\n",
+    "\n",
+    "    # Calculate the accuracy on the validation dataset and round it to 3 decimal digits.\n",
+    "    y_pred = model.predict_proba(X_val)[:, 1]\n",
+    "    converted_decision = (y_pred >= 0.5)\n",
+    "    accuracy = (y_val == converted_decision).mean()\n",
+    "    accuracy_dict[c] = round(accuracy, 3)\n",
+    "\n",
+    "# Print the dictionary to check the results\n",
+    "for key, value in accuracy_dict.items():\n",
+    "    print(f\"{key}: {value}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05b7b321-3ea1-4892-a091-1fe97bde5a33",
+   "metadata": {},
+   "source": [
+    "Answer 6: 0.01"
    ]
   }
  ],
